# TorchSharp.FlashAttention

./: .gitattributes  .gitignore  BranchInfo.props  Dependencies.props  Directory.Build.props  README.md  TorchSharp.FlashAttention.sln  pack.bat  pack.sh
Native/: build.bat  build.proj  build.sh
Native/LibFlashAttention/: CMakeLists.txt  LibFlashAttention.cpp  LibFlashAttention.h  LibFlashAttention.vcxproj  LibFlashAttention.vcxproj.filters  Utils.h
Redist/flash-attn-2.5.2/: compile_flash.bat  compile_flash.sh  flash-attn-2.5.2.patch  flash-attn-2.5.2.proj
Redist/flash-attn-2.5.5/: compile_flash.bat  flash-attn-2.5.5.patch  flash-attn-2.5.5.proj
Redist/libtorch-cuda-12.1/: libtorch-cuda-12.1.proj
TorchSharp.FlashAttention/: BertPadding.cs  FlashAttention.cs  FlashAttentionInterface.cs  NativeMethods.cs  TorchSharp.FlashAttention.csproj
TorchSharp.FlashAttention/BertPaddingFunctions/: IndexFirstAxis.cs  IndexFirstAxisResidual.cs  IndexPutFirstAxis.cs
TorchSharp.FlashAttention/FlashAttentionFunctions/: FlashAttnFunc.cs  FlashAttnKVPackedFunc.cs  FlashAttnQKVPackedFunc.cs  FlashAttnVarlenFunc.cs  FlashAttnVarlenKVPackedFunc.cs  FlashAttnVarlenQKVPackedFunc.cs  PinnedArray.cs  Utils.cs
